--- a/論PHP常見的漏洞/0x05-上傳/5.02 WooYun-2014-65835：Qibocms圖片系統任意文件查看導致的多處注入(可提升自己為管理員).md
+++ b/論PHP常見的漏洞/0x05-上傳/5.02 WooYun-2014-65835：Qibocms圖片系統任意文件查看導致的多處注入(可提升自己為管理員).md
@@ -37,37 +37,38 @@ inc/check.postarticle.php
 跟進去看。
 
 ```php
-$postdb[smalltitle]    =    filtrate($postdb[smalltitle]);
+$postdb[smalltitle]			=		filtrate($postdb[smalltitle]);
 
-    $postdb[picurl]        =    filtrate($postdb[picurl]);
+    $postdb[picurl]			=		filtrate($postdb[picurl]);
 
     //$postdb[description]=    filtrate($postdb[description]);
 
-    $postdb[author]        =    filtrate($postdb[author]);
+    $postdb[author]			=		filtrate($postdb[author]);
 
-    $postdb[copyfrom]    =    filtrate($postdb[copyfrom]);
+    $postdb[copyfrom]		=		filtrate($postdb[copyfrom]);
 
-    $postdb[copyfromurl]=    filtrate($postdb[copyfromurl]);
+    $postdb[copyfromurl]	=		filtrate($postdb[copyfromurl]);
 
-    $postdb[description]    =    preg_replace('/javascript/i','java script',$postdb[description]);
+    $postdb[description]    =    	preg_replace('/javascript/i','java script',$postdb[description]);
 
-    $postdb[description]    =    preg_replace('/<iframe ([^<>]+)>/i','&lt;iframe \\1>',$postdb[description]);
+    $postdb[description]    =    	preg_replace('/<iframe ([^<>]+)>/i','&lt;iframe \\1>',$postdb[description]);
 
     //針對firefox瀏覽器做的處理
 
-    $postdb[content]=str_replace("=\\\"../$webdb[updir]/","=\\\"$webdb[www_url]/$webdb[updir]/",$postdb[content]);
+    $postdb[content]		=		str_replace("=\\\"../$webdb[updir]/","=\\\"$webdb[www_url]/$webdb[updir]/",$postdb[content]);
 
-    if(!$groupdb[PostNoDelCode]){
+    if(!$groupdb[PostNoDelCode])
+    {
 
-        $postdb[content]    =    preg_replace('/javascript/i','java script',$postdb[content]);
+        $postdb[content]	=		preg_replace('/javascript/i','java script',$postdb[content]);
 
-        $postdb[content]    =    preg_replace('/<iframe ([^<>]+)>/i','&lt;iframe \\1>',$postdb[content]);
+        $postdb[content]	=		preg_replace('/<iframe ([^<>]+)>/i','&lt;iframe \\1>',$postdb[content]);
 
     }
 
     //採集外部圖片
 
-    $postdb[content]    =    get_outpic($postdb[content],$fid,$GetOutPic);
+    $postdb[content]		=		get_outpic($postdb[content],$fid,$GetOutPic);
 ```
 
 在這裡又呼叫了get_outpic這個函數 可以跟之前發的媒體版結合解析漏洞Getshell那樣一樣的利用。
@@ -80,19 +81,22 @@ $postdb[smalltitle]    =    filtrate($postdb[smalltitle]);
 <p>
 
 ```php
-if($post_db){
+if($post_db)
+{
 
         foreach($post_db[photourl][url] AS $key=>$value){
 
             $value=trim($value);
 
-            if(!$value||eregi("://",$value)){
+            if(!$value||eregi("://",$value))
+            {
 
                 continue;
 
             }
 
-            if(!$postdb[picurl]){
+            if(!$postdb[picurl])
+            {
 
                 copy(ROOT_PATH."$webdb[updir]/$value",ROOT_PATH."$webdb[updir]/{$value}.jpg");
 
@@ -101,20 +105,24 @@ if($post_db){
             }
 
             move_attachment($lfjuid,tempdir($value),$downloadDIR);
+
 ```
 
 在這裡$post_db 結合 qibocms的偽全局 直接 提交一下就行了。
 
 ```php
-foreach($post_db[photourl][url] AS $key=>$value){
+foreach($post_db[photourl][url] AS $key=>$value)
+{
 
             $value=trim($value);
 
-            if(!$value||eregi("://",$value)){
+            if(!$value||eregi("://",$value))
+            {
 
                 continue;
-
             }
+
+}
 ```
 
 在這裡循環出來後 不能讓他匹配出:// 然後繼續看
@@ -142,36 +150,36 @@ copy(ROOT_PATH."$webdb[updir]/$value",ROOT_PATH."$webdb[updir]/{$value}.jpg");
 elseif($action=='mobphone2')
 {
 
-	if($lfjdb[mob_yz])
-	{
+		if($lfjdb[mob_yz])
+		{
 
-		showerr("請不要重複驗證手機號碼!");
-	
-	}
+			showerr("請不要重複驗證手機號碼!");
+		
+		}
 
-	if(!$yznum)
-	{
+		if(!$yznum)
+		{
 
-		showerr("請輸入驗證碼");
-	
-	}
+			showerr("請輸入驗證碼");
+		
+		}
 
-elseif(!$md5code)
-	{
+		elseif(!$md5code)
+		{
 
-			showerr("資料有誤");
-	}
+				showerr("資料有誤");
+		}
 
-else
-	{
+		else
+		{
 
-	unset($code,$mobphone,$uid);
-	list($code,$mobphone,$uid)=explode("\t",mymd5($md5code,"DE") );
+		unset($code,$mobphone,$uid);
+		list($code,$mobphone,$uid)=explode("\t",mymd5($md5code,"DE") );
 
-if($code!=$yznum||$uid!=$lfjuid)
-	{
-		showerr("驗證碼不對");
-	}
+		if($code!=$yznum||$uid!=$lfjuid)
+		{
+			showerr("驗證碼不對");
+		}
 
 }
 
@@ -187,7 +195,8 @@ $db->query("UPDATE {$pre}memberdata SET mobphone='$mobphone',mob_yz='1' WHERE ui
 </pre>
 
 ```php
-function mymd5($string,$action="EN",$rand=''){ //字符串加密與解密
+function mymd5($string,$action="EN",$rand='')
+{ //字符串加密與解密
 
     global $webdb;
 
@@ -202,8 +211,8 @@ function mymd5($string,$action="EN",$rand=''){ //字符串加密與解密
     if($string==="") return ""; 
 
     if($action=="EN") $md5code=substr(md5($string),8,10); 
-
-    else{ 
+    else
+    { 
 
         $md5code=substr($string,-10); 
 
