--- a/論PHP常見的漏洞/0x05-上傳/5.02 WooYun-2014-65835：Qibocms圖片系統任意文件查看導致的多處注入(可提升自己為管理員).md
+++ b/論PHP常見的漏洞/0x05-上傳/5.02 WooYun-2014-65835：Qibocms圖片系統任意文件查看導致的多處注入(可提升自己為管理員).md
@@ -37,38 +37,38 @@ inc/check.postarticle.php
 跟進去看。
 
 ```php
-$postdb[smalltitle]			=		filtrate($postdb[smalltitle]);
+	$postdb[smalltitle]		=		filtrate($postdb[smalltitle]);
 
-    $postdb[picurl]			=		filtrate($postdb[picurl]);
+	$postdb[picurl]			=		filtrate($postdb[picurl]);
 
-    //$postdb[description]=    filtrate($postdb[description]);
+	    //$postdb[description]=    filtrate($postdb[description]);
 
-    $postdb[author]			=		filtrate($postdb[author]);
+	$postdb[author]			=		filtrate($postdb[author]);
 
-    $postdb[copyfrom]		=		filtrate($postdb[copyfrom]);
+	$postdb[copyfrom]		=		filtrate($postdb[copyfrom]);
 
-    $postdb[copyfromurl]	=		filtrate($postdb[copyfromurl]);
+	$postdb[copyfromurl]	=		filtrate($postdb[copyfromurl]);
 
-    $postdb[description]    =    	preg_replace('/javascript/i','java script',$postdb[description]);
+	$postdb[description]    =    	preg_replace('/javascript/i','java script',$postdb[description]);
 
-    $postdb[description]    =    	preg_replace('/<iframe ([^<>]+)>/i','&lt;iframe \\1>',$postdb[description]);
+	$postdb[description]    =    	preg_replace('/<iframe ([^<>]+)>/i','&lt;iframe \\1>',$postdb[description]);
 
-    //針對firefox瀏覽器做的處理
+	    //針對firefox瀏覽器做的處理
 
-    $postdb[content]		=		str_replace("=\\\"../$webdb[updir]/","=\\\"$webdb[www_url]/$webdb[updir]/",$postdb[content]);
+	$postdb[content]		=		str_replace("=\\\"../$webdb[updir]/","=\\\"$webdb[www_url]/$webdb[updir]/",$postdb[content]);
 
-    if(!$groupdb[PostNoDelCode])
-    {
+	if(!$groupdb[PostNoDelCode])
+	{
 
-        $postdb[content]	=		preg_replace('/javascript/i','java script',$postdb[content]);
+	    $postdb[content]	=		preg_replace('/javascript/i','java script',$postdb[content]);
 
-        $postdb[content]	=		preg_replace('/<iframe ([^<>]+)>/i','&lt;iframe \\1>',$postdb[content]);
+	    $postdb[content]	=		preg_replace('/<iframe ([^<>]+)>/i','&lt;iframe \\1>',$postdb[content]);
 
-    }
+	}
 
-    //採集外部圖片
+	    //採集外部圖片
 
-    $postdb[content]		=		get_outpic($postdb[content],$fid,$GetOutPic);
+	$postdb[content]		=		get_outpic($postdb[content],$fid,$GetOutPic);
 ```
 
 在這裡又呼叫了get_outpic這個函數 可以跟之前發的媒體版結合解析漏洞Getshell那樣一樣的利用。
@@ -77,7 +77,7 @@ $postdb[smalltitle]			=		filtrate($postdb[smalltitle]);
 <p>
 繼續往下面看 看看有什麼不同的沒。
 <p>
-這里和媒體版的那個還是有不同的
+這裡和媒體版的那個還是有不同的
 <p>
 
 ```php
