--- a/論PHP常見的漏洞/0x05-上傳/5.02 WooYun-2014-65835：Qibocms圖片系統任意文件查看導致的多處注入(可提升自己為管理員).md
+++ b/論PHP常見的漏洞/0x05-上傳/5.02 WooYun-2014-65835：Qibocms圖片系統任意文件查看導致的多處注入(可提升自己為管理員).md
@@ -41,19 +41,19 @@ inc/check.postarticle.php
 
 	$postdb[picurl]			=		filtrate($postdb[picurl]);
 
-	    //$postdb[description]=    filtrate($postdb[description]);
+	//$postdb[description]=    filtrate($postdb[description]);
 
 	$postdb[author]			=		filtrate($postdb[author]);
 
 	$postdb[copyfrom]		=		filtrate($postdb[copyfrom]);
 
-	$postdb[copyfromurl]	=		filtrate($postdb[copyfromurl]);
+	$postdb[copyfromurl		=		filtrate($postdb[copyfromurl]);
 
-	$postdb[description]    =    	preg_replace('/javascript/i','java script',$postdb[description]);
+	$postdb[description]	=    	preg_replace('/javascript/i','java script',$postdb[description]);
 
-	$postdb[description]    =    	preg_replace('/<iframe ([^<>]+)>/i','&lt;iframe \\1>',$postdb[description]);
+	$postdb[description]	=    	preg_replace('/<iframe ([^<>]+)>/i','&lt;iframe \\1>',$postdb[description]);
 
-	    //針對firefox瀏覽器做的處理
+	//針對firefox瀏覽器做的處理
 
 	$postdb[content]		=		str_replace("=\\\"../$webdb[updir]/","=\\\"$webdb[www_url]/$webdb[updir]/",$postdb[content]);
 
@@ -66,7 +66,7 @@ inc/check.postarticle.php
 
 	}
 
-	    //採集外部圖片
+	//採集外部圖片
 
 	$postdb[content]		=		get_outpic($postdb[content],$fid,$GetOutPic);
 ```
