--- a/論PHP常見的漏洞/0x06-加密函數問題/6.1 WooYun-2014-71655：DedeCMS-V5.7-SP1(2014-07-25)sql注入+新繞過思路.md
+++ b/論PHP常見的漏洞/0x06-加密函數問題/6.1 WooYun-2014-71655：DedeCMS-V5.7-SP1(2014-07-25)sql注入+新繞過思路.md
@@ -337,7 +337,7 @@ foreach($Items as $key=>$val)
                 }
 ```
 
-將解密後的數據帶入了資料庫。
+將解密後的資料帶入了資料庫。
 <p>
 本以為到這裡就結束了，然而，dede自帶的防護sql注入的函數做了更新，以前的@，char都不能用了。
 <p>
@@ -361,7 +361,7 @@ if (strpos($clean, '@') !== FALSE OR strpos($clean,'char(')!== FALSE
 <p>
 Shop_De開頭的和 DedeUserID就是我們所需要的~
 <p>
-調用poc裡的函數
+呼叫poc裡的函數
 <p>
 得到 最終playload
 
