--- a/php_codes_aduit/0x02 漏洞挖掘/文件操作漏洞.md
+++ b/php_codes_aduit/0x02 漏洞挖掘/文件操作漏洞.md
@@ -240,7 +240,10 @@ POST不同port的正常URL到該文件，如果是正常web服務則返回網站
 
 內網的安全通常都很薄弱,溢出,弱口令等一般都是存在的。通過ssrf攻擊,可以實現對內網的訪問,從而可以攻擊內網或者本地機器,獲得shell等。
 <p>
-**【跨協議通信技術】**跨協議通信技術(Inter-Protocol Communication)
+	
+**【跨協議通信技術】**
+<p>
+跨協議通信技術(Inter-Protocol Communication)
 <p>
 是指兩種不同的協議可以交換指令和資料的技術。其中一種稱為目標協議，另外一種稱為載體協議。目標協議就是我們最終想要通信的協議，而載體協議是用來封裝我們最後想要發送的指令和資料。
 <p>
