--- a/Web_Hacking_101/八、跨站請求偽造.md
+++ b/Web_Hacking_101/八、跨站請求偽造.md
@@ -12,7 +12,7 @@
 跨站請求偽造，或CSRF攻擊，在惡意網站，電子郵件，即使消息，應用以及其它，使用戶的Web瀏覽器執行其它站點上的一些操作，並且用戶已經授權或登錄了該站點時發生。通常會在用戶不知道操作已經執行的情況下發生。
 
 CSRF 攻擊的影響取決於收到操作的站點。這裡是一個例子：
-1. Bob 登錄了它的銀行賬戶，執行了一些操作，但是沒有登出。
+1. Bob 登錄了它的銀行帳戶，執行了一些操作，但是沒有登出。
 2. Bob 檢查了它的郵箱，並點擊了一個陌生站點的鏈接。
 3. 陌生站點向 Bob 銀行站點發送請求來進行轉賬，並傳遞第一步中，保存 Bob 銀行會話的 Cookie 信息。
 Bob 的銀行站點收到了來自陌生（惡意）站點的請求，沒有使用 CSRF Token 的情況下處理了轉賬。
@@ -83,11 +83,12 @@ URL：https://twitter-commerce.shopifyapps.com/auth/twitter/disconnect
 報告鏈接：https://hackerone.com/reports/111216
 報告日期：2016.1.17
 獎金：$500
-描述：
 ```
-Shopify 提供了 Twitter 的繼承，來允許店主轉推它們的商品。與之相似，也提供了功能來斷開推特賬戶和被連接商店的鏈接。
+## **描述：**
+
+Shopify 提供了 Twitter 的繼承，來允許店主轉推它們的商品。與之相似，也提供了功能來斷開推特帳戶和被連接商店的鏈接。
 <p>
-斷開 Twitter 賬戶的 URL 寫在了上面。當進行調用時，Shopify 不驗證 CSRf Token，這可能會允許惡意人員代表受害者進行 GET 調用，因此斷開受害者的商店與 Twitter 的連接。
+斷開 Twitter 帳戶的 URL 寫在了上面。當進行調用時，Shopify 不驗證 CSRf Token，這可能會允許惡意人員代表受害者進行 GET 調用，因此斷開受害者的商店與 Twitter 的連接。
 <p>
 在提供這份報告的時候，WeSecureApp 提供了下面的漏洞請求示例 - 要注意下面的img標籤的使用，它對漏洞 URL 進行調用：
 
