--- a/Web_Hacking_101/八、跨站請求偽造.md
+++ b/Web_Hacking_101/八、跨站請求偽造.md
@@ -133,6 +133,7 @@ URL：https://badoo.com
 ```
 如果你仔細檢查 Badoo ，你會發現，它們通過包含 URL 參數`rt`來防禦 CSRF，它只有 5 個位數（至少在我寫這篇的時候）。雖然我在 Badoo 入駐 HackerOne 的時候就注意到了，我並沒有找到利用它的方式，但是`zombiehelp54`找到了。
 <p>
+	
 發現`rt`參數以及其值之後，它也注意到了，參數一戶在所有 JSON 響應中都返回。不幸的是，這並沒有什麼幫助，因為 CORS 保護了 Badoo，攻擊者無法讀取這些響應，所以它繼續挖掘。
 <p>
 
@@ -160,11 +161,11 @@ function getCSRFcode(str) {
 
 >重要結論
 >
->無風不起浪。這裡，攻擊者註意到了rt參數在不同位置返回，特別是 JSON 響應，
+>無風不起浪。這裡，攻擊者注意到了`rt`參數在不同位置返回，特別是 JSON 響應，
 >因此，它正確猜測了，它可能出現在一些可以利用的地方，這裡是 JS 文件。
 >繼續幹吧，如果你覺得一些東西可能會發生，一定要繼續挖掘。當你訪問目標站點或應用時，使用 Burp 檢查所有被呼叫的資源。重要結論
 >
->無風不起浪。這裡，攻擊者註意到了rt參數在不同位置返回，特別是 JSON 響應，因此，它正確猜測了，
+>無風不起浪。這裡，攻擊者注意到了rt參數在不同位置返回，特別是 JSON 響應，因此，它正確猜測了，
 >它可能出現在一些可以利用的地方，這裡是 JS 文件。
 >繼續幹吧，如果你覺得一些東西可能會發生，一定要繼續挖掘。當你訪問目標站點或應用時，使用 Burp 檢查所有被呼叫的資源。
 
