--- a/Web_Hacking_101/九、應用邏輯漏洞.md
+++ b/Web_Hacking_101/九、應用邏輯漏洞.md
@@ -7,7 +7,7 @@
 >協議：CC BY-NC-SA 4.0
 >
 
-應用邏輯漏洞不同於其他我們討論過的類型。雖然 HTML 注入、HTML 參數污染和 XSS 都涉及到提交一些類型的潛在惡意輸入，應用落地及漏洞實際上涉及到操縱場景和利用 Web APP 代碼中的 Bug。
+應用邏輯漏洞不同於其他我們討論過的類型。雖然 HTML 注入、HTML 參數污染和 XSS 都涉及到提交一些類型的潛在惡意輸入，應用落地及漏洞實際上涉及到操縱場景和利用 Web APP 程式碼中的 Bug。
 <p>
 
 這一類型攻擊的一個值得注意的例子是 Egor Homakov 對 Github 的滲透，Github 使用 RoR 編寫。如果你不熟悉 Rails，他是一個非常流行的 Web 框架，在開發 Web 站點時，它可以處理很多繁雜的東西。
@@ -16,16 +16,16 @@
 
 在2012 年3 月，Egor 通知了Rails 社區，通常，Rails 會接受所有提交給它的參數，並使用這些值來更新數據庫記錄（取決於開發者的實現。Rails 核心開發者的想法是，使用Rails的Web 開發者應該負責填補它們的安全間隙，並定義那個值能夠由用戶提交來更新記錄。這個行為已經在社區內人人皆知了，但是Github 上的線程展示了很少的人能夠鑑別出來它帶來的風險（[https://github.com/rails/rails/issues/5228](https://github.com/rails/rails/issues/5228)）。
 
-當核心開發者不同意他的時候，Egor 繼續利用Github 上的認證漏洞，通過猜測和提交參數值，它包含創建日期（如果你熟悉Rails 並且知道多數數據庫記錄包含創建和更新日期列，它就不太困難）。因此，它在 Github 上傳了一個票據，年份是未來的某個日期。它也設法更新 SHH 訪問密鑰，這可以使他訪問 Github 官方的代碼倉庫
+當核心開發者不同意他的時候，Egor 繼續利用Github 上的認證漏洞，通過猜測和提交參數值，它包含創建日期（如果你熟悉Rails 並且知道多數數據庫記錄包含創建和更新日期列，它就不太困難）。因此，它在 Github 上傳了一個票據，年份是未來的某個日期。它也設法更新 SHH 訪問密鑰，這可以使他訪問 Github 官方的程式碼倉庫
 
 <p>
 
-之前提到了，這個滲透通過 Github 後端代碼實現，它並沒有合理驗證 Egor 所做的事情，這在隨後可用於更新數據庫記錄。這裡，Egor 發現了叫做大量賦值漏洞的東西。
+之前提到了，這個滲透通過 Github 後端程式碼實現，它並沒有合理驗證 Egor 所做的事情，這在隨後可用於更新數據庫記錄。這裡，Egor 發現了叫做大量賦值漏洞的東西。
 
 
 <p>
 
-應用邏輯漏洞，即發現前面討論的這種類型的攻擊，更加有技巧性，因為它們依賴代碼判定的創造性思維，並且並不僅僅是提交潛在的惡意代碼，開發者沒有轉義它。 （不要嘗試在這裡簡化其它類型的漏洞，一些 XSS 攻擊也很複雜！）
+應用邏輯漏洞，即發現前面討論的這種類型的攻擊，更加有技巧性，因為它們依賴程式碼判定的創造性思維，並且並不僅僅是提交潛在的惡意程式碼，開發者沒有轉義它。 （不要嘗試在這裡簡化其它類型的漏洞，一些 XSS 攻擊也很複雜！）
 
 <p>
 
