--- a/Web_Hacking_101/九、應用邏輯漏洞.md
+++ b/Web_Hacking_101/九、應用邏輯漏洞.md
@@ -31,3 +31,40 @@
 
 使用 Github 的例子，Egor 知道了系統基於 Rails 以及 Rails 如何處理用戶輸入。在其他例子中，它涉及直接編程調用 API 來測試應用的行為，就像 Shopify 的管理員權限繞過那樣。或者，它涉及重複使用來自認證 API 調用的返回值，來進行後續的API 調用，本不應該允許你這麼做。
 
+
+---
+
+## **示例**
+
+## **1. Shopify 管理員權限繞過**
+
+```
+難度：低
+
+URL：shop.myshopify.com/admin/mobile_devices.json
+報告鏈接：https://hackerone.com/reports/100938
+報告日期：2015.11.22
+獎金：$500
+```
+
+## **描述**
+
+Shopify 是一個巨大並健壯的平台，它包含 Web UI 以及受支持的 API。這個例子中，API 不驗證一些權限，而 Web UI 明顯會這麼做。因此，商店的管理員，它們不被允許接受郵件提醒，可以通過操作 API 終端來繞過這個安全設置，在它們的 Apple 設備中收到提醒。
+
+根據報告，黑客只需要：
+- 使用完全訪問權限的賬號登錄 Shopify 移動應用
+- 攔截`POST /admin/mobile_devices.json`的請求
+- 移除該賬號的所有權限
+- 移除添加的移動端提醒
+- 重放`POST /admin/mobile_devices.json`的請求
+
+這樣做之後，用戶可以接收到所有商店處的訂單的移動端提醒，因此忽略了商店配置的安全設置。
+
+
+>重要結論
+>
+>這裡有兩個重要結論。首先，並不是所有東西都涉及代碼注入。始終記住使用代碼並觀察向站點傳遞了什麼信息，
+>並玩玩它看看什麼會發生。這裡，所有發生>的事情是，移除 POST 參數來繞過安全檢查。
+>其次，再說一遍，不是所有攻擊都基於 HTML 頁面。 API 
+>終端始終是一個潛在的漏洞區域，所以確保你考慮並測試了它們。
+
