--- a/Web_Hacking_101/九、應用邏輯漏洞.md
+++ b/Web_Hacking_101/九、應用邏輯漏洞.md
@@ -52,9 +52,9 @@ URL：shop.myshopify.com/admin/mobile_devices.json
 Shopify 是一個巨大並健壯的平台，它包含 Web UI 以及受支持的 API。這個例子中，API 不驗證一些權限，而 Web UI 明顯會這麼做。因此，商店的管理員，它們不被允許接受郵件提醒，可以通過操作 API 終端來繞過這個安全設置，在它們的 Apple 設備中收到提醒。
 
 根據報告，黑客只需要：
-- 使用完全訪問權限的賬號登錄 Shopify 移動應用
+- 使用完全訪問權限的帳號登錄 Shopify 移動應用
 - 攔截`POST /admin/mobile_devices.json`的請求
-- 移除該賬號的所有權限
+- 移除該帳號的所有權限
 - 移除添加的移動端提醒
 - 重放`POST /admin/mobile_devices.json`的請求
 
