--- a/Web_Hacking_101/九、應用邏輯漏洞.md
+++ b/Web_Hacking_101/九、應用邏輯漏洞.md
@@ -63,7 +63,7 @@ Shopify 是一個巨大並健壯的平台，它包含 Web UI 以及受支持的 
 
 >重要結論
 >
->這裡有兩個重要結論。首先，並不是所有東西都涉及代碼注入。始終記住使用代碼並觀察向站點傳遞了什麼信息，
+>這裡有兩個重要結論。首先，並不是所有東西都涉及程式碼注入。始終記住使用程式碼並觀察向站點傳遞了什麼信息，
 >並玩玩它看看什麼會發生。這裡，所有發生>的事情是，移除 POST 參數來繞過安全檢查。
 >其次，再說一遍，不是所有攻擊都基於 HTML 頁面。 API 
 >終端始終是一個潛在的漏洞區域，所以確保你考慮並測試了它們。
