--- a/Web_Hacking_101/九、應用邏輯漏洞.md
+++ b/Web_Hacking_101/九、應用邏輯漏洞.md
@@ -68,3 +68,36 @@ Shopify 是一個巨大並健壯的平台，它包含 Web UI 以及受支持的 
 >其次，再說一遍，不是所有攻擊都基於 HTML 頁面。 API 
 >終端始終是一個潛在的漏洞區域，所以確保你考慮並測試了它們。
 
+---
+
+## **2. 星巴克競態條件**
+
+```
+難度：中
+
+URL：Starbucks.com
+報告鏈接：http://sakurity.com/blog/2015/05/21/starbucks.html
+報告日期：2015.5.21
+
+獎金：無
+
+```
+
+## **描述**
+
+如果你不熟悉競態條件，本質上它是兩個潛在的進程彼此競爭來完成任務，基於一個廚師場景，它在請求被執行期間變得無效。換句話說，這是一個場景，其中你擁有兩個進程，它們本應該是互斥的，不應該同時完成，但是因為它們幾乎同時執行，它們被允許這麼做了。
+這裡是一個例子：
+
+1. 你在手機上登錄進了你的銀行站點，並請求將 $500 從你的一個僅僅擁有 $500 的賬戶轉到另一個賬戶。
+<p>
+2. 這個請求花費很長時間（但是仍然處理），所以你在你的筆記本上登錄，並且再次執行了相同請求。
+<p>
+3. 筆記本的請求幾乎立即完成了，但是你的手機也是這樣。
+<p>
+4. 你刷新了銀行賬戶，並發現你的賬戶裡有 $1000。這意味著請求執行了兩次，這本不應被允許，因為你一開始只擁有 $500。
+
+雖然這個很基礎，理念都是一樣的，一些條件存在於請求開始，在完成時，並不存在了。
+<p>
+所以，回到這個例子，Egor 測試了從一個星巴克的卡中轉賬，並且發現他成功觸發了競態條件。請求使用 CURL 程序幾乎同時創建。
+
+
