--- a/Web_Hacking_101/九、應用邏輯漏洞.md
+++ b/Web_Hacking_101/九、應用邏輯漏洞.md
@@ -104,6 +104,12 @@ URL：Starbucks.com
 
 雖然這個很基礎，理念都是一樣的，一些條件存在於請求開始，在完成時，並不存在了。
 <p>
-所以，回到這個例子，Egor 測試了從一個星巴克的卡中轉賬，並且發現他成功觸發了競態條件。請求使用 CURL 程序幾乎同時創建。
+所以，回到這個例子，Egor 測試了從一個星巴克的卡中轉帳，並且發現他成功觸發了競態條件。請求使用 CURL 程式幾乎同時創建。
 
+>重要結論
+>
+>競態條件 是個有趣的攻擊向量，它有時存在於應用處理一些類型的餘額的地方，
+>例如金額、積分，以及其他。發現這些漏洞並不總是發生在第一次嘗試的時候，
+>並且可能需要執行多次重複同時的請求。這裡，Egor 在成功之前執行了 
+>6 次請求。但是要記住在測試它的時候，要注意流量負荷，避免使用連續的測試請求危害到站點。
 
