--- a/Web_Hacking_101/九、應用邏輯漏洞.md
+++ b/Web_Hacking_101/九、應用邏輯漏洞.md
@@ -113,3 +113,44 @@ URL：Starbucks.com
 >並且可能需要執行多次重複同時的請求。這裡，Egor 在成功之前執行了 
 >6 次請求。但是要記住在測試它的時候，要注意流量負荷，避免使用連續的測試請求危害到站點。
 
+---
+
+## **3. Binary.com 權限提升**
+
+```
+難度：低
+
+URL：binary.com
+
+報告鏈接：https://hackerone.com/reports/98247
+報告日期：2015.11.14
+獎金：$300
+```
+
+## **描述**
+
+這真是一個直接的漏洞，不需要過多解析。
+<P>
+
+本質上，在這個場景下，用戶能夠登錄任何賬戶，代表被黑的用戶賬戶，並查看敏感信息，或執行操作，並且一切只需要知道用戶的 UID。
+
+<p>
+
+在你滲透之前，如果你登錄了`Binary.com/cashier`，並查看了頁面的 HTML，你會注意到有個`<iframe>`標籤包含 PIN 參數。這個參數實際上就是你的賬戶 ID。
+
+<p>
+下面，如果你編輯了 HTML，並且插入了另一個 PIN，站點就會自動在新賬戶上執行操作，而不驗證密碼或者任何其他憑據。換句話說，站點會將你看做你所提供的賬戶的擁有者。
+
+<p>
+
+同樣，所需的一切就是知道某人的賬戶號碼。你甚至可以在出現在`iframe`中的時間修改為`PAYOUT`，來觸發另一個賬戶的付款操作。但是，`Bianry.com`表示，所有取款都需要手動人工複查，但是這並不是說，這就一定會被發現。
+
+
+>重要結論
+>
+>如果你尋找基於漏洞的認證，要留意憑據傳遞給站點的地方。雖然這個漏洞通過查看頁面源碼來實現，
+>你也可以在使用代理攔截器的時候，留意傳遞的信息。
+>
+>如果你的確發現了被傳遞的一些類型的憑據，但他們看起來沒有加密時，要注意了，並且嘗試玩玩它們。
+>這裡，PIN 是CRXXXXXX而密碼是0e552ae717a1d08cb134f132。顯然 PIN 
+>沒有解密，但是密碼加密了。未加密的值是一個非常好的地方，你可以從這裡下手。
