--- a/Web_Hacking_101/九、應用邏輯漏洞.md
+++ b/Web_Hacking_101/九、應用邏輯漏洞.md
@@ -148,7 +148,7 @@ URL：binary.com
 
 >重要結論
 >
->如果你尋找基於漏洞的認證，要留意憑據傳遞給站點的地方。雖然這個漏洞通過查看頁面源碼來實現，
+>如果你尋找基於漏洞的認證，要留意憑據傳遞給站點的地方。雖然這個漏洞通過查看頁面原始碼來實現，
 >你也可以在使用代理攔截器的時候，留意傳遞的信息。
 >
 >如果你的確發現了被傳遞的一些類型的憑據，但他們看起來沒有加密時，要注意了，並且嘗試玩玩它們。
