--- a/Web_Hacking_101/九、應用邏輯漏洞.md
+++ b/Web_Hacking_101/九、應用邏輯漏洞.md
@@ -154,3 +154,29 @@ URL：binary.com
 >如果你的確發現了被傳遞的一些類型的憑據，但他們看起來沒有加密時，要注意了，並且嘗試玩玩它們。
 >這裡，PIN 是`CRXXXXXX`而密碼是`0e552ae717a1d08cb134f132`。顯然 PIN 
 >沒有解密，但是密碼加密了。未加密的值是一個非常好的地方，你可以從這裡下手。
+
+
+### **4. HackerOne 信號操作**
+
+```
+難度：低
+
+URL：hackerone.com/reports/XXXXX
+報告鏈接：https://hackerone.com/reports/106305
+報告日期：2015.12.21
+獎金：$500
+```
+
+描述：
+
+在 2015 年年末，HackerOne 向站點進入了新的功能，叫做信號。本質上，在這些報告關閉之後，它有助於識別黑客的之前漏洞報告的有效性。重要的是要注意，用戶可以關閉它們在 HackerOne 上的報告，這本應該對他們的聲譽和信號功能毫無影響。
+<p>
+
+所以，你可以猜到，在測試該功能的時候，一個黑客發現了這個功能的不合理實現，並且允許黑客向任何團隊創建報告，自己關閉報告，並從中受益。
+<p>
+
+>重要結論
+>
+>通過一個簡短的描述，這裡的結論不可能全部覆蓋。一定要留意新的功能！當站點實現了新的功能時，它對於黑客就像鮮肉一樣。新的功能
+>展示了測試新代碼和搜索漏洞的機會。這就和 Shopify 和 Twitter 的 CSRF，以及 Facebook 的 XSS 漏洞一樣。為了最大利用它們，
+>使你自己熟悉公司，並且訂閱公司的博客是個好主意，以便你在一些東西發布之後能夠收到提醒。之後測試它們。
