--- a/Web_Hacking_101/九、應用邏輯漏洞.md
+++ b/Web_Hacking_101/九、應用邏輯漏洞.md
@@ -167,9 +167,10 @@ URL：hackerone.com/reports/XXXXX
 獎金：$500
 ```
 
-描述：
+## **描述：**
 
-在 2015 年年末，HackerOne 向站點進入了新的功能，叫做信號。本質上，在這些報告關閉之後，它有助於識別黑客的之前漏洞報告的有效性。重要的是要注意，用戶可以關閉它們在 HackerOne 上的報告，這本應該對他們的聲譽和信號功能毫無影響。
+在 2015 年年末，HackerOne 向站點進入了新的功能，叫做信號。
+本質上，在這些報告關閉之後，它有助於識別黑客的之前漏洞報告的有效性。重要的是要注意，用戶可以關閉它們在 HackerOne 上的報告，這本應該對他們的聲譽和信號功能毫無影響。
 <p>
 
 所以，你可以猜到，在測試該功能的時候，一個黑客發現了這個功能的不合理實現，並且允許黑客向任何團隊創建報告，自己關閉報告，並從中受益。
@@ -178,5 +179,5 @@ URL：hackerone.com/reports/XXXXX
 >重要結論
 >
 >通過一個簡短的描述，這裡的結論不可能全部覆蓋。一定要留意新的功能！當站點實現了新的功能時，它對於黑客就像鮮肉一樣。新的功能
->展示了測試新代碼和搜索漏洞的機會。這就和 Shopify 和 Twitter 的 CSRF，以及 Facebook 的 XSS 漏洞一樣。為了最大利用它們，
+>展示了測試新程式碼和搜索漏洞的機會。這就和 Shopify 和 Twitter 的 CSRF，以及 Facebook 的 XSS 漏洞一樣。為了最大利用它們，
 >使你自己熟悉公司，並且訂閱公司的博客是個好主意，以便你在一些東西發布之後能夠收到提醒。之後測試它們。
