--- a/Web_Hacking_101/九、應用邏輯漏洞.md
+++ b/Web_Hacking_101/九、應用邏輯漏洞.md
@@ -181,3 +181,37 @@ URL：hackerone.com/reports/XXXXX
 >通過一個簡短的描述，這裡的結論不可能全部覆蓋。一定要留意新的功能！當站點實現了新的功能時，它對於黑客就像鮮肉一樣。新的功能
 >展示了測試新程式碼和搜索漏洞的機會。這就和 Shopify 和 Twitter 的 CSRF，以及 Facebook 的 XSS 漏洞一樣。為了最大利用它們，
 >使你自己熟悉公司，並且訂閱公司的博客是個好主意，以便你在一些東西發布之後能夠收到提醒。之後測試它們。
+
+---
+
+5
+## **5. Shopify S3 Bucket 開放**
+
+```
+難度：中
+
+URL：cdn.shopify.com/assets
+報告鏈接：https://hackerone.com/reports/106305
+報告日期：2015.11.9
+獎金：$1000
+```
+
+## **描述：**
+
+Amazon 簡易存儲 S3，是一個服務，允許用戶在 Amazon 的雲服務器上儲存和託管文件。 Shopify 和許多站點都是用 S3 來儲存和託管靜態內容，例如圖片。
+<p>
+
+Amazon Web 服務的整個套件，AWS，是非常健壯的，並包含權限管理系統，允許管理員為每個服務定義權限，包含 S3。許可包含創建 S3 Bucket 的功能（Bucket 就像儲存器的文件夾），讀取和寫入 Bucket ，以及其他。
+<p>
+
+根據披露，Shopify 沒有合理配置它們的 S3 Bucket 權限，並且無意中允許任何認證過的 AWS 用戶讀取或寫入它們的 Bucket。這顯然是由問題的，因為你至少不希望惡意的黑帽子使用你的 S3 Bucket 來儲存和託管文件。
+<p>
+
+不幸的是，這個問題的細節沒有暴露，但是可能使用 AWS CLI 來發現，這是一個工具，允許你和 AWS 服務在你的共領航上交互。雖然你需要一個 AWS 賬戶來做這個事情，創建賬戶實際上也是免費的，因為你不需要任何服務。因此，使用 CLI 你就可以在 AWS 上認證你自己，並且隨後測試是否可以訪問（這也是我發現 HackerOne Bucket 的方式，它在下面列出）。
+
+>重要結論
+>
+>當你偵查一個潛在的目標時，確保注意到所有不同的工具，包含 Web 
+>服務，它們明顯可以使用。每個服務或軟件，OS，以及其他。你可以尋找或發現新的攻擊向量。此外，使你自己熟悉流行的 Web 工具，
+>例如 AWS S3，Zendesk，Rails，以及其他是個好主意。許多站點都使用它們。
+
