--- a/Web_Hacking_101/0x05-應用邏輯漏洞.md
+++ b/Web_Hacking_101/0x05-應用邏輯漏洞.md
@@ -214,3 +214,95 @@ Amazon Web 服務的整個套件，AWS，是非常健壯的，並包含權限管
 >服務，它們明顯可以使用。每個服務或軟件，OS，以及其他。你可以尋找或發現新的攻擊向量。此外，使你自己熟悉流行的 Web 工具，
 >例如 AWS S3，Zendesk，Rails，以及其他是個好主意。許多站點都使用它們。
 
+---
+
+## **6. HackerOne S3 Bucket 開放**
+
+```
+難度：中
+
+URL：[REDACTED].s3.amazonaws.com
+報告鏈接：https://hackerone.com/reports/128088
+報告日期：2016.4.3
+獎金：$2500
+```
+
+描述：
+
+我們打算講一些有些不同的東西。這是一個漏洞，我實際上發現了他，並且和上面描述的 Shopify 的問題有些不同，所以我打算詳細分享關於我如何發現他的任何事情。
+<p>
+
+所以，一開始，上面描述的漏洞就是，一個 Bucket 公開鏈接到了 Shopify。意思是，當你訪問這個想點時，你會看到 AWS 服務的調用，所以黑客就知道 Bucket 指向哪裡。但是我並沒有 -- 我使用了一個很酷的腳本和一些工具來發現了 Bucket。
+<p>
+
+在 4 月 3 日的周末，我不知道為什麼，但是我決定跳出思維定式，並嘗試攻擊 HackerOne。我一開始就玩了玩它們的站點，並且每次新漏洞發現時，都迫使我自己閱讀信息披露，想了解為什麼我錯過了它。我想知道他們的 S3 Bucket 是否存在類似 Shopify 的漏洞。我也想知道，黑客如何訪問了 Shopify 的 Bucket。我了解到它是通過 Amazon 命令行工具來訪問的。
+<p>
+
+現在，通常我會使自己停下，因為 HackerOne 這個時候不可能還擁有漏洞。但是我突然有一個想法，它來源於我和 Ben Sadeghipour (@Nahamsec) 的訪談，就是不要懷疑自己，或者公司犯錯的可能。
+所以我在 Google 上搜索一些細節，並碰到了兩個有意思的頁面：
+[There’s a Hole in 1,951 Amazon S3 Buckets](https://community.rapid7.com/community/infosec/blog/2013/03/27/1951-open-s3-buckets)
+<p>
+[S3 Bucket Finder](https://digi.ninja/projects/bucket_finder.php)
+
+第一個是個有趣的文章，來自 Rapid7，它是個安全公司，這篇文章關於如何發現公開可寫的 S3 Bucket ，並通過模糊測試，或者猜測 Bucket 名稱來實現。
+<p>
+第二個是個很酷的工具，它接受一個單詞列表，並調用 S3 來尋找 Bucket。但是，它沒有自帶列表。在 Rapid7 的文章中有一行關鍵字，“通過一個不同的列表來猜測名稱，列表包含 1000 強公司的名稱，以 .com, -backup, -media 排列。”
+<p>
+這就很有意思了。我很快為 HackerOne 創建了一列 Bucket 可能名稱，像這樣：
+
+
+<pre>
+hackerone, hackerone.marketing, hackerone.attachments, hackerone.users, hackerone.files
+</pre>
+
+這些都不是真正的 Bucket。它們來自於報告。所以我覺得我肯定能夠發現它。我將其留作一個挑戰。
+<p>
+
+現在，使用 Ruby 腳本，我開始調用那些 Bucket。事情剛開始並不是那麼好，我發現了幾個 Bucket 但是都拒絕訪問。很不幸，所以我先離開，看看 NetFlix。
+<p>
+
+但是這個想法還在提醒著我，所以在我睡覺之前，我決定再次使用更多組合來執行腳本。我再次發現了大量的 Bucket，它們看起來是 HackerOne 的，但是所有都拒絕訪問。我意識到，拒絕訪問起碼告訴我它們是存在的。
+
+<p>
+我打開了 Ruby 腳本，它在 Buckets調用了ls的等價函數。換句話說，我嘗試觀察它們是否公開可讀的。我想知道它，以及它們是否公開可寫的。
+
+<p>
+
+此外，現在 AWS 提供了命令行工具，aws-cli。我知道它，因為我之前用過，所以我在我的 VM 上快速執行`sudo apt-get aws-cli`，並準備好了。你可以
+
+
+在`docs.aws.amazon.com/cli/latest/userguide/installing.html`上找到這個東西的指南。
+
+現在，命令`awss3help`會打開 S3 的幫助，並列出可用的命令。這些命令之一是`mv`，以`aws s3 mv [FILE] [s3://BUCKET]`的形式，所以我嘗試：
+
+```sh
+touch test.txt
+aws s3 mv test.txt s3://hackerone.marketing
+```
+
+這是第一個Bucket，我從中收到了拒絕訪問，並在調用PutObject操作時，我收到了`move failed: ./test.txt to s3://hackerone.marketing/test.txt A client error(Access Denied )。`
+<p>
+
+所以嘗試下一個，`aws s3 mv test.txt s3://hackerone.files`，並且成功了。我收到了這個消息，`move: ./test.txt to s3://hackerone.files/test.txt。`
+
+真是神奇！現在我嘗試刪除文件：`aws s3 rm s3://hackerone.files/test.txt`，同樣成功了。
+
+但是現在我還是懷疑自己。我快速登出了 HackerOne 來報告。並且在我鍵入時，我意識到我並沒有實際確認 Bucket 的所有權。 AWS 允許任何人在全局名字空間下創建任何 Bucket。意思是，你，或者讀者都可能實際擁有我在測試的 Bucket。
+<p>
+
+我不確定是否應該不驗證就報告。我搜索了 Google 來看看我是否可以找到任何 Bucket 的引用。我沒有找到什麼東西。我離開了電腦，來理清頭緒。我意識到，最壞的事情就是我得到了另一個無效報告，以及貢獻 -5。另一方面，我知道這至少值 $500，基於 Shopify 的漏洞也可能是 $1000。
+<p>
+
+我按下了提交，並去睡覺了。當我醒來的時候，HackerOne 回復了恭喜，並說它們已經修復了它和一些其他的存在漏洞的 Bucket。成功了！並且按照它們的條款，當他們授予獎勵的時候，它們會考慮潛在的安全性，包括我沒有發現但存在漏洞的其它 Bucket。
+
+>重要結論
+>
+>有多個重要結論：
+> 1. 不要低估你的能力，以及開發者犯錯的可能性。 HackerOne 是個優秀的團隊，擁有優秀的安全研究員。但是人們都會犯錯。挑戰你的假設吧。
+>
+> 2. 不要在首次嘗試之後就放棄。當我發現它的時候，瀏覽器每個 Bucket 都不可用，並且我幾乎離開了。但是之後我嘗試寫入文件，它成功了。
+>
+> 3. 所有的東西都在於只是。如果你知道存在了哪種漏洞，你就知道了要尋找以及測試什麼。讀這本書就是一個良好的開始。
+>
+> 4. 一個攻擊面要好於站點，它也是公司所使用的的服務。要跳出思維定式。
+
