--- a/Web_Hacking_101/0x05-應用邏輯漏洞.md
+++ b/Web_Hacking_101/0x05-應用邏輯漏洞.md
@@ -227,7 +227,7 @@ URL：[REDACTED].s3.amazonaws.com
 獎金：$2500
 ```
 
-描述：
+## **描述：**
 
 我們打算講一些有些不同的東西。這是一個漏洞，我實際上發現了他，並且和上面描述的 Shopify 的問題有些不同，所以我打算詳細分享關於我如何發現他的任何事情。
 <p>
@@ -242,7 +242,7 @@ URL：[REDACTED].s3.amazonaws.com
 所以我在 Google 上搜索一些細節，並碰到了兩個有意思的頁面：
 [There’s a Hole in 1,951 Amazon S3 Buckets](https://community.rapid7.com/community/infosec/blog/2013/03/27/1951-open-s3-buckets)
 <p>
-[S3 Bucket Finder](https://digi.ninja/projects/bucket_finder.php)
+![S3 Bucket Finder](https://digi.ninja/projects/bucket_finder.php)
 
 第一個是個有趣的文章，來自 Rapid7，它是個安全公司，這篇文章關於如何發現公開可寫的 S3 Bucket ，並通過模糊測試，或者猜測 Bucket 名稱來實現。
 <p>
@@ -268,10 +268,9 @@ hackerone, hackerone.marketing, hackerone.attachments, hackerone.users, hackeron
 
 <p>
 
-此外，現在 AWS 提供了命令行工具，aws-cli。我知道它，因為我之前用過，所以我在我的 VM 上快速執行`sudo apt-get aws-cli`，並準備好了。你可以
+此外，現在 AWS 提供了命令行工具，aws-cli。我知道它，因為我之前用過，所以我在我的 VM 上快速執行`sudo apt-get aws-cli`，並準備好了。
 
-
-在`docs.aws.amazon.com/cli/latest/userguide/installing.html`上找到這個東西的指南。
+你可以在`docs.aws.amazon.com/cli/latest/userguide/installing.html`上找到這個東西的指南。
 
 現在，命令`awss3help`會打開 S3 的幫助，並列出可用的命令。這些命令之一是`mv`，以`aws s3 mv [FILE] [s3://BUCKET]`的形式，所以我嘗試：
 
