--- a/Web_Hacking_101/0x05-應用邏輯漏洞.md
+++ b/Web_Hacking_101/0x05-應用邏輯漏洞.md
@@ -308,3 +308,66 @@ aws s3 mv test.txt s3://hackerone.marketing
 >
 > 4. 一個攻擊面要好於站點，它也是公司所使用的的服務。要跳出思維定式。
 
+---
+
+## **7. 繞過 Gitlab 的雙因素認證**
+
+```
+難度：中
+
+URL：無
+報告鏈接：https://hackerone.com/reports/128085
+報告日期：2016.4.3
+
+獎金：無
+```
+
+## **描述：**
+
+4 月 3 日，Jobert Abma（HackerOne 的聯合創始人）向 Gitlab 報告稱，在雙因素認證開啟情況下，攻擊者能夠登錄受害者的賬戶，而不需知道受害者的密碼。
+<p>
+
+對於那些不熟悉的人，雙因素認證是兩個登錄步驟，通常用戶輸入它們的用戶名和麵，之後站點會發送驗證碼，通常通過電子郵件或者 SMS，用戶需要輸入它來完成登錄過程。
+<p>
+
+這裡，Jobert 注意到，在這個過程中，一旦攻擊者輸入了用戶名和密碼，會發送一個 Token 來結束登錄。在提交這個 Token 時，POST 調用為：
+
+```
+POST /users/sign_in HTTP/1.1
+Host: 159.xxx.xxx.xxx ...
+
+----------1881604860
+Content-Disposition: form-data; name="user[otp_attempt]"
+
+212421
+----------1881604860-
+```
+
+如果攻擊者攔截了它並向調用添加了用戶名，例如：
+
+```
+POST /users/sign_in HTTP/1.1
+Host: 159.xxx.xxx.xxx ...
+
+----------1881604860
+Content-Disposition: form-data; name="user[otp_attempt]"
+
+212421
+----------1881604860
+Content-Disposition: form-data; name="user[login]"
+
+john
+----------1881604860-
+```
+
+攻擊者就能夠登錄進 John 的賬戶，如果`otp_attempt`對 John 可用。換句話說，在兩步認證期間，如果攻擊者添加了`user[login]`參數，它們就能修改被登錄的賬戶。
+
+現在，唯一的麻煩就是攻擊者需要擁有有效的 OTP Token，用於受害者。但是這就是爆破登場的時候了。如果站點管理員沒有實現速率限制，Jobert 就可以對服務器執行重複調用來猜測有效的 Token。攻擊成功的可能性取決於向服務器發送請求的傳輸時間，以及 Token 有效時間的長度，但是無論如何，這裡的漏洞都很明顯。
+
+
+>重要結論
+>
+>雙因素驗證是個機巧的系統，難以正確實現。當你注意到站點使用了它時，你需要完整測試所有功能，
+>包括 Token 的生命週期，嘗試的最大次數，復用過期的 Token，猜測 Token 的可能性，以及其他。
+
+
