--- a/Web_Hacking_101/0x05-應用邏輯漏洞.md
+++ b/Web_Hacking_101/0x05-應用邏輯漏洞.md
@@ -324,7 +324,7 @@ URL：無
 
 ## **描述：**
 
-4 月 3 日，Jobert Abma（HackerOne 的聯合創始人）向 Gitlab 報告稱，在雙因素認證開啟情況下，攻擊者能夠登錄受害者的賬戶，而不需知道受害者的密碼。
+4 月 3 日，Jobert Abma（HackerOne 的聯合創始人）向 Gitlab 報告稱，在雙因素認證開啟情況下，攻擊者能夠登錄受害者的帳戶，而不需知道受害者的密碼。
 <p>
 
 對於那些不熟悉的人，雙因素認證是兩個登錄步驟，通常用戶輸入它們的用戶名和麵，之後站點會發送驗證碼，通常通過電子郵件或者 SMS，用戶需要輸入它來完成登錄過程。
@@ -360,7 +360,7 @@ john
 ----------1881604860-
 ```
 
-攻擊者就能夠登錄進 John 的賬戶，如果`otp_attempt`對 John 可用。換句話說，在兩步認證期間，如果攻擊者添加了`user[login]`參數，它們就能修改被登錄的賬戶。
+攻擊者就能夠登錄進 John 的帳戶，如果`otp_attempt`對 John 可用。換句話說，在兩步認證期間，如果攻擊者添加了`user[login]`參數，它們就能修改被登錄的帳戶。
 
 現在，唯一的麻煩就是攻擊者需要擁有有效的 OTP Token，用於受害者。但是這就是爆破登場的時候了。如果站點管理員沒有實現速率限制，Jobert 就可以對服務器執行重複調用來猜測有效的 Token。攻擊成功的可能性取決於向服務器發送請求的傳輸時間，以及 Token 有效時間的長度，但是無論如何，這裡的漏洞都很明顯。
 
