--- a/Web_Hacking_101/0x05-應用邏輯漏洞.md
+++ b/Web_Hacking_101/0x05-應用邏輯漏洞.md
@@ -29,7 +29,7 @@
 
 <p>
 
-使用 Github 的例子，Egor 知道了系統基於 Rails 以及 Rails 如何處理用戶輸入。在其他例子中，它涉及直接編程調用 API 來測試應用的行為，就像 Shopify 的管理員權限繞過那樣。或者，它涉及重複使用來自認證 API 調用的返回值，來進行後續的API 調用，本不應該允許你這麼做。
+使用 Github 的例子，Egor 知道了系統基於 Rails 以及 Rails 如何處理用戶輸入。在其他例子中，它涉及直接編程呼叫 API 來測試應用的行為，就像 Shopify 的管理員權限繞過那樣。或者，它涉及重複使用來自認證 API 呼叫的返回值，來進行後續的API 呼叫，本不應該允許你這麼做。
 
 
 ---
@@ -232,7 +232,7 @@ URL：[REDACTED].s3.amazonaws.com
 我們打算講一些有些不同的東西。這是一個漏洞，我實際上發現了他，並且和上面描述的 Shopify 的問題有些不同，所以我打算詳細分享關於我如何發現他的任何事情。
 <p>
 
-所以，一開始，上面描述的漏洞就是，一個 Bucket 公開鏈接到了 Shopify。意思是，當你訪問這個想點時，你會看到 AWS 服務的調用，所以黑客就知道 Bucket 指向哪裡。但是我並沒有 -- 我使用了一個很酷的腳本和一些工具來發現了 Bucket。
+所以，一開始，上面描述的漏洞就是，一個 Bucket 公開鏈接到了 Shopify。意思是，當你訪問這個想點時，你會看到 AWS 服務的呼叫，所以黑客就知道 Bucket 指向哪裡。但是我並沒有 -- 我使用了一個很酷的腳本和一些工具來發現了 Bucket。
 <p>
 
 在 4 月 3 日的周末，我不知道為什麼，但是我決定跳出思維定式，並嘗試攻擊 HackerOne。我一開始就玩了玩它們的站點，並且每次新漏洞發現時，都迫使我自己閱讀信息披露，想了解為什麼我錯過了它。我想知道他們的 S3 Bucket 是否存在類似 Shopify 的漏洞。我也想知道，黑客如何訪問了 Shopify 的 Bucket。我了解到它是通過 Amazon 命令行工具來訪問的。
@@ -249,7 +249,7 @@ URL：[REDACTED].s3.amazonaws.com
 
 第一個是個有趣的文章，來自 Rapid7，它是個安全公司，這篇文章關於如何發現公開可寫的 S3 Bucket ，並通過模糊測試，或者猜測 Bucket 名稱來實現。
 <p>
-第二個是個很酷的工具，它接受一個單詞列表，並調用 S3 來尋找 Bucket。但是，它沒有自帶列表。在 Rapid7 的文章中有一行關鍵字，“通過一個不同的列表來猜測名稱，列表包含 1000 強公司的名稱，以 .com, -backup, -media 排列。”
+第二個是個很酷的工具，它接受一個單詞列表，並呼叫 S3 來尋找 Bucket。但是，它沒有自帶列表。在 Rapid7 的文章中有一行關鍵字，“通過一個不同的列表來猜測名稱，列表包含 1000 強公司的名稱，以 .com, -backup, -media 排列。”
 <p>
 這就很有意思了。我很快為 HackerOne 創建了一列 Bucket 可能名稱，像這樣：
 
@@ -261,13 +261,13 @@ hackerone, hackerone.marketing, hackerone.attachments, hackerone.users, hackeron
 這些都不是真正的 Bucket。它們來自於報告。所以我覺得我肯定能夠發現它。我將其留作一個挑戰。
 <p>
 
-現在，使用 Ruby 腳本，我開始調用那些 Bucket。事情剛開始並不是那麼好，我發現了幾個 Bucket 但是都拒絕訪問。很不幸，所以我先離開，看看 NetFlix。
+現在，使用 Ruby 腳本，我開始呼叫那些 Bucket。事情剛開始並不是那麼好，我發現了幾個 Bucket 但是都拒絕訪問。很不幸，所以我先離開，看看 NetFlix。
 <p>
 
 但是這個想法還在提醒著我，所以在我睡覺之前，我決定再次使用更多組合來執行腳本。我再次發現了大量的 Bucket，它們看起來是 HackerOne 的，但是所有都拒絕訪問。我意識到，拒絕訪問起碼告訴我它們是存在的。
 
 <p>
-我打開了 Ruby 腳本，它在 Buckets調用了ls的等價函數。換句話說，我嘗試觀察它們是否公開可讀的。我想知道它，以及它們是否公開可寫的。
+我打開了 Ruby 腳本，它在 Buckets呼叫了ls的等價函數。換句話說，我嘗試觀察它們是否公開可讀的。我想知道它，以及它們是否公開可寫的。
 
 <p>
 
@@ -282,7 +282,7 @@ touch test.txt
 aws s3 mv test.txt s3://hackerone.marketing
 ```
 
-這是第一個Bucket，我從中收到了拒絕訪問，並在調用PutObject操作時，我收到了`move failed: ./test.txt to s3://hackerone.marketing/test.txt A client error(Access Denied )。`
+這是第一個Bucket，我從中收到了拒絕訪問，並在呼叫PutObject操作時，我收到了`move failed: ./test.txt to s3://hackerone.marketing/test.txt A client error(Access Denied )。`
 <p>
 
 所以嘗試下一個，`aws s3 mv test.txt s3://hackerone.files`，並且成功了。我收到了這個消息，`move: ./test.txt to s3://hackerone.files/test.txt。`
@@ -330,7 +330,7 @@ URL：無
 對於那些不熟悉的人，雙因素認證是兩個登錄步驟，通常用戶輸入它們的用戶名和麵，之後站點會發送驗證碼，通常通過電子郵件或者 SMS，用戶需要輸入它來完成登錄過程。
 <p>
 
-這裡，Jobert 注意到，在這個過程中，一旦攻擊者輸入了用戶名和密碼，會發送一個 Token 來結束登錄。在提交這個 Token 時，POST 調用為：
+這裡，Jobert 注意到，在這個過程中，一旦攻擊者輸入了用戶名和密碼，會發送一個 Token 來結束登錄。在提交這個 Token 時，POST 呼叫為：
 
 ```
 POST /users/sign_in HTTP/1.1
@@ -343,7 +343,7 @@ Content-Disposition: form-data; name="user[otp_attempt]"
 ----------1881604860-
 ```
 
-如果攻擊者攔截了它並向調用添加了用戶名，例如：
+如果攻擊者攔截了它並向呼叫添加了用戶名，例如：
 
 ```
 POST /users/sign_in HTTP/1.1
@@ -362,7 +362,7 @@ john
 
 攻擊者就能夠登錄進 John 的帳戶，如果`otp_attempt`對 John 可用。換句話說，在兩步認證期間，如果攻擊者添加了`user[login]`參數，它們就能修改被登錄的帳戶。
 
-現在，唯一的麻煩就是攻擊者需要擁有有效的 OTP Token，用於受害者。但是這就是爆破登場的時候了。如果站點管理員沒有實現速率限制，Jobert 就可以對服務器執行重複調用來猜測有效的 Token。攻擊成功的可能性取決於向服務器發送請求的傳輸時間，以及 Token 有效時間的長度，但是無論如何，這裡的漏洞都很明顯。
+現在，唯一的麻煩就是攻擊者需要擁有有效的 OTP Token，用於受害者。但是這就是爆破登場的時候了。如果站點管理員沒有實現速率限制，Jobert 就可以對服務器執行重複呼叫來猜測有效的 Token。攻擊成功的可能性取決於向服務器發送請求的傳輸時間，以及 Token 有效時間的長度，但是無論如何，這裡的漏洞都很明顯。
 
 
 >重要結論
