--- a/Web_Hacking_101/0x05-應用邏輯漏洞.md
+++ b/Web_Hacking_101/0x05-應用邏輯漏洞.md
@@ -370,4 +370,62 @@ john
 >雙因素驗證是個機巧的系統，難以正確實現。當你注意到站點使用了它時，你需要完整測試所有功能，
 >包括 Token 的生命週期，嘗試的最大次數，復用過期的 Token，猜測 Token 的可能性，以及其他。
 
+---
+
+## **8. 雅虎 PHP 信息洩露**
+
+```
+難度：中
+
+URL：http://nc10.n9323.mail.ne1.yahoo.com/phpinfo.php
+報告鏈接：https://blog.it-securityguard.com/bugbounty-yahoo-phpinfo-php-disclosure-2/
+報告日期；2014.10.16
+獎金：無
+```
+
+描述：
+
+雖然它並沒有巨額獎金，像是其他漏洞那樣（實際上沒有獎金，非常意外），但這是我最喜歡的報告之一，因為它教會了我網絡掃描和自動化的重要性。
+<p>
+
+在 2014 年 10 月，Patrik Fehrenbach（你應該從“Hacking Pro Tips Interview#2”中了解了他，很棒的一個傢伙）發現了雅虎的服務器中存在可訪問的`phpinfo()`文件。如果你不熟悉`phpinfo()`，這是一個敏感的命令，它不應該在生產環境能夠訪問，以及公開訪問，因為它洩露了所有類型的服務器信息。
+<p>
+
+現在，你可能想知道 Patrik 如何找到了`http://nc10.n9323.mail.ne1.yahoo.com`，我保證。結果它 PING 了`yahoo.com`，它返回了`98.138.253.109`。之後它將其傳給了 WHOIS，並發現雅虎實際上擁有下面這些東西
+
+<p>
+
+```
+NetRange: 98.136.0.0 - 98.139.255.255
+CIDR: 98.136.0.0/14
+OriginAS:
+NetName: A-YAHOO-US9
+NetHandle: NET-98-136-0-0-1
+Parent: NET-98-0-0-0-0
+NetType: Direct Allocation
+RegDate: 2007-12-07
+Updated: 2012-03-02
+Ref: http://whois.arin.net/rest/net/NET-98-136-0-0-1
+```
+
+
+要注意第一行，雅虎擁有大量的 IP 地址，從`98.136.0.0`到`98.139.255.255`，或者`98.136.0.0/14`，這是 260000 個獨立 IP 地址。這是大量的潛在目標。
+<p>
+
+Patrik 之後寫了個簡單的 bash 腳本來尋找可用的phpinfo文件：
+
+```sh
+#!/bin/bash
+for ipa in 98.13{6..9}.{0..255}.{0..255}; do
+wget -t 1 -T 5 http://${ipa}/phpinfo.php; done &
+```
+執行了這個，他在隨機的雅虎服務器上發現了它。
+
+
+>重要結論
+>
+>在滲透的時候，考慮公司的整個設施，除非他們告訴你這超出範圍了。雖然這個報告沒有得到一分錢的獎金，我知道 Patrik 
+>使用了相似的技巧來尋找一些重要的漏洞來獲得獎金。
+>
+>此外，你會注意到，這裡有 260000 個潛在的地址，他們不可能手動掃描。在執行這一類型的測試時，自動化非常重要，並且是應該使用的東西。
 
