--- a/Web_Hacking_101/0x05-應用邏輯漏洞.md
+++ b/Web_Hacking_101/0x05-應用邏輯漏洞.md
@@ -63,7 +63,7 @@ Shopify 是一個巨大並健壯的平台，它包含 Web UI 以及受支持的 
 
 >重要結論
 >
->這裡有兩個重要結論。首先，並不是所有東西都涉及程式碼注入。始終記住使用程式碼並觀察向站點傳遞了什麼信息，
+>這裡有兩個重要結論。首先，並不是所有東西都涉及程式碼注入。始終記住使用程式碼並觀察向站點傳遞了什麼訊息，
 >並玩玩它看看什麼會發生。這裡，所有發生>的事情是，移除 POST 參數來繞過安全檢查。
 >其次，再說一遍，不是所有攻擊都基於 HTML 頁面。 API 
 >終端始終是一個潛在的漏洞區域，所以確保你考慮並測試了它們。
@@ -132,7 +132,7 @@ URL：binary.com
 這真是一個直接的漏洞，不需要過多解析。
 <P>
 
-本質上，在這個場景下，用戶能夠登錄任何帳戶，代表被黑的用戶帳戶，並查看敏感信息，或執行操作，並且一切只需要知道用戶的 UID。
+本質上，在這個場景下，用戶能夠登錄任何帳戶，代表被黑的用戶帳戶，並查看敏感訊息，或執行操作，並且一切只需要知道用戶的 UID。
 
 <p>
 
@@ -149,7 +149,7 @@ URL：binary.com
 >重要結論
 >
 >如果你尋找基於漏洞的認證，要留意憑據傳遞給站點的地方。雖然這個漏洞通過查看頁面原始碼來實現，
->你也可以在使用代理攔截器的時候，留意傳遞的信息。
+>你也可以在使用代理攔截器的時候，留意傳遞的訊息。
 >
 >如果你的確發現了被傳遞的一些類型的憑據，但他們看起來沒有加密時，要注意了，並且嘗試玩玩它們。
 >這裡，PIN 是`CRXXXXXX`而密碼是`0e552ae717a1d08cb134f132`。顯然 PIN 
@@ -235,7 +235,7 @@ URL：[REDACTED].s3.amazonaws.com
 所以，一開始，上面描述的漏洞就是，一個 Bucket 公開鏈接到了 Shopify。意思是，當你訪問這個想點時，你會看到 AWS 服務的呼叫，所以黑客就知道 Bucket 指向哪裡。但是我並沒有 -- 我使用了一個很酷的腳本和一些工具來發現了 Bucket。
 <p>
 
-在 4 月 3 日的周末，我不知道為什麼，但是我決定跳出思維定式，並嘗試攻擊 HackerOne。我一開始就玩了玩它們的站點，並且每次新漏洞發現時，都迫使我自己閱讀信息披露，想了解為什麼我錯過了它。我想知道他們的 S3 Bucket 是否存在類似 Shopify 的漏洞。我也想知道，黑客如何訪問了 Shopify 的 Bucket。我了解到它是通過 Amazon 命令行工具來訪問的。
+在 4 月 3 日的周末，我不知道為什麼，但是我決定跳出思維定式，並嘗試攻擊 HackerOne。我一開始就玩了玩它們的站點，並且每次新漏洞發現時，都迫使我自己閱讀訊息披露，想了解為什麼我錯過了它。我想知道他們的 S3 Bucket 是否存在類似 Shopify 的漏洞。我也想知道，黑客如何訪問了 Shopify 的 Bucket。我了解到它是通過 Amazon 命令行工具來訪問的。
 <p>
 
 現在，通常我會使自己停下，因為 HackerOne 這個時候不可能還擁有漏洞。但是我突然有一個想法，它來源於我和 Ben Sadeghipour (@Nahamsec) 的訪談，就是不要懷疑自己，或者公司犯錯的可能。
@@ -372,7 +372,7 @@ john
 
 ---
 
-## **8. 雅虎 PHP 信息洩露**
+## **8. 雅虎 PHP 訊息洩露**
 
 ```
 難度：中
@@ -388,7 +388,7 @@ URL：http://nc10.n9323.mail.ne1.yahoo.com/phpinfo.php
 雖然它並沒有巨額獎金，像是其他漏洞那樣（實際上沒有獎金，非常意外），但這是我最喜歡的報告之一，因為它教會了我網絡掃描和自動化的重要性。
 <p>
 
-在 2014 年 10 月，Patrik Fehrenbach（你應該從“Hacking Pro Tips Interview#2”中了解了他，很棒的一個傢伙）發現了雅虎的服務器中存在可訪問的`phpinfo()`文件。如果你不熟悉`phpinfo()`，這是一個敏感的命令，它不應該在生產環境能夠訪問，以及公開訪問，因為它洩露了所有類型的服務器信息。
+在 2014 年 10 月，Patrik Fehrenbach（你應該從"Hacking Pro Tips Interview#2"中了解了他，很棒的一個傢伙）發現了雅虎的服務器中存在可訪問的`phpinfo()`文件。如果你不熟悉`phpinfo()`，這是一個敏感的命令，它不應該在生產環境能夠訪問，以及公開訪問，因為它洩露了所有類型的服務器訊息。
 <p>
 
 現在，你可能想知道 Patrik 如何找到了`http://nc10.n9323.mail.ne1.yahoo.com`，我保證。結果它 PING 了`yahoo.com`，它返回了`98.138.253.109`。之後它將其傳給了 WHOIS，並發現雅虎實際上擁有下面這些東西
