--- a/Web_Hacking_101/0x05-應用邏輯漏洞.md
+++ b/Web_Hacking_101/0x05-應用邏輯漏洞.md
@@ -55,7 +55,7 @@ Shopify 是一個巨大並健壯的平台，它包含 Web UI 以及受支持的 
 - 使用完全訪問權限的帳號登錄 Shopify 移動應用
 - 攔截`POST /admin/mobile_devices.json`的請求
 - 移除該帳號的所有權限
-- 移除添加的移動端提醒
+- 移除新增的移動端提醒
 - 重放`POST /admin/mobile_devices.json`的請求
 
 這樣做之後，用戶可以接收到所有商店處的訂單的移動端提醒，因此忽略了商店配置的安全設置。
@@ -343,7 +343,7 @@ Content-Disposition: form-data; name="user[otp_attempt]"
 ----------1881604860-
 ```
 
-如果攻擊者攔截了它並向呼叫添加了用戶名，例如：
+如果攻擊者攔截了它並向呼叫新增了用戶名，例如：
 
 ```
 POST /users/sign_in HTTP/1.1
@@ -360,7 +360,7 @@ john
 ----------1881604860-
 ```
 
-攻擊者就能夠登錄進 John 的帳戶，如果`otp_attempt`對 John 可用。換句話說，在兩步認證期間，如果攻擊者添加了`user[login]`參數，它們就能修改被登錄的帳戶。
+攻擊者就能夠登錄進 John 的帳戶，如果`otp_attempt`對 John 可用。換句話說，在兩步認證期間，如果攻擊者新增了`user[login]`參數，它們就能修改被登錄的帳戶。
 
 現在，唯一的麻煩就是攻擊者需要擁有有效的 OTP Token，用於受害者。但是這就是爆破登場的時候了。如果站點管理員沒有實現速率限制，Jobert 就可以對服務器執行重複呼叫來猜測有效的 Token。攻擊成功的可能性取決於向服務器發送請求的傳輸時間，以及 Token 有效時間的長度，但是無論如何，這裡的漏洞都很明顯。
 
