--- a/Web_Hacking_101/0x05-應用邏輯漏洞.md
+++ b/Web_Hacking_101/0x05-應用邏輯漏洞.md
@@ -378,8 +378,11 @@ john
 難度：中
 
 URL：http://nc10.n9323.mail.ne1.yahoo.com/phpinfo.php
+
 報告鏈接：https://blog.it-securityguard.com/bugbounty-yahoo-phpinfo-php-disclosure-2/
+
 報告日期；2014.10.16
+
 獎金：無
 ```
 
@@ -409,7 +412,9 @@ Ref: http://whois.arin.net/rest/net/NET-98-136-0-0-1
 ```
 
 
-要注意第一行，雅虎擁有大量的 IP 地址，從`98.136.0.0`到`98.139.255.255`，或者`98.136.0.0/14`，這是 260000 個獨立 IP 地址。這是大量的潛在目標。
+要注意第一行，雅虎擁有大量的 IP 地址，從`98.136.0.0`到`98.139.255.255`，或者`98.136.0.0/14`，
+<br>
+這是 260000 個獨立 IP 地址。這是大量的潛在目標。
 <p>
 
 Patrik 之後寫了個簡單的 bash 腳本來尋找可用的phpinfo文件：
