--- a/Web_Hacking_101/0x05-應用邏輯漏洞.md
+++ b/Web_Hacking_101/0x05-應用邏輯漏洞.md
@@ -434,3 +434,63 @@ wget -t 1 -T 5 http://${ipa}/phpinfo.php; done &
 >
 >此外，你會注意到，這裡有 260000 個潛在的地址，他們不可能手動掃描。在執行這一類型的測試時，自動化非常重要，並且是應該使用的東西。
 
+---
+
+## **9. HackerOne Hacktivity 投票**
+
+```
+難度：中
+
+URL：https://hackerone.com/hacktivity
+
+報告鏈接：https://hackerone.com/reports/137503
+
+報告日期：2016.5.10
+
+獎金：Swag
+```
+
+描述：
+
+雖然嚴格來說，這裡沒有真正的安全漏洞，這個報告是個跳出思維定式的良好示例。
+<p>
+
+2016 年 4 月到 5 月的一段時間，HackerOne 為黑客開發了一個新功能，來通過 Hacktivity 
+列表給報告投票。要知道功能是否可用，有個簡單的辦法，也有個難的辦法。通過簡單的辦法，
+登錄時`/current_user`的 GET 調用會包含`hacktivity_voting_enabled:false`。難的辦法有些有趣，
+其中存在漏洞，並且這就是我包含這篇報告的原因。
+
+如果你訪問了 hacktivity 並且查看了頁面源碼，你會注意到非常稀疏，只是一些`div`，沒有真正的內容。
+
+![1](https://raw.githubusercontent.com/dyeat/Document_read/master/Web_Hacking_101/image/9-1.jpg)
+
+HackerOne Hacktivity 頁面源碼
+<p>
+
+現在，如果你不喜歡他們的平台，並且沒有安裝類似於 wappalyzer 的插件，僅僅看這個頁面源碼也會告訴你，內容由 JavaScript 渲染。
+<p>
+
+所以，知道了之後，如果你打開Chrome 或Firefox 的開發者工具，你可以檢查JavaScript 源碼（在Chrome 中，你需要訪問source，左邊是top>hackerone.com->assets->frontend-XXX.js） 。 Chrome 的開發者工具自帶了花括號美化打印的按鈕，這會使最小化的 JavaScript 刻度。你也可以使用 Burp 來查看返回這個 JavaScript 文件的響應。
+<p>
+
+原因是這樣，如果你在 JavaScript 中搜索 POST，你會發現一些 HackerOne 所使用的 路徑，它們可能不是那麼明顯，取決於你的權限，以及內容裡有什麼東西。其中之一是：
+<p>
+
+![2](https://raw.githubusercontent.com/dyeat/Document_read/master/Web_Hacking_101/image/9-2.jpg)
+
+
+HackerOne 應用的 JavaScript POST 投票
+
+你可以看到，我們有兩個用於投票功能的路徑。在寫這個報告的時候，你實際可以執行這些調用，並給報告投票。
+<p>
+
+現在，這是發現功能的一種方式 -- 在報告中，黑客使用了另一種，通過攔截 HackerOne 的響應（大概是使用類似 Burp 的工具）。它們將返回為假的屬性切換為真。這之後暴露了投票元素，在點擊時，執行了可用的 POST 或者 DELETE 調用。
+<p>
+
+我想你展示 JavaScript 的原因時，和 JSON 響應交互可能不會總是暴露新的 HTML 元素。因此，瀏覽 JavaScript 可能暴露其它“隱藏的”終端來交互。
+
+>重要結論
+>
+>JavaScript 源代碼想你提供了來自目標的實際源代碼，你可以瀏覽它們。這非常棒，因為你的測試從完全黑盒，
+>對後端沒有任何想法，變成了白盒（雖然也不完全是），其中可以觀察代碼如何執行。這不意味你需要走查每一行代碼，
+>這裡的 POST 調用在 20570 >行發現，只使用了一個簡單的 POST 搜索。
