--- a/Web_Hacking_101/0x05-應用邏輯漏洞.md
+++ b/Web_Hacking_101/0x05-應用邏輯漏洞.md
@@ -249,7 +249,7 @@ URL：[REDACTED].s3.amazonaws.com
 
 第一個是個有趣的文章，來自 Rapid7，它是個安全公司，這篇文章關於如何發現公開可寫的 S3 Bucket ，並通過模糊測試，或者猜測 Bucket 名稱來實現。
 <p>
-第二個是個很酷的工具，它接受一個單詞列表，並呼叫 S3 來尋找 Bucket。但是，它沒有自帶列表。在 Rapid7 的文章中有一行關鍵字，“通過一個不同的列表來猜測名稱，列表包含 1000 強公司的名稱，以 .com, -backup, -media 排列。”
+第二個是個很酷的工具，它接受一個單詞列表，並呼叫 S3 來尋找 Bucket。但是，它沒有自帶列表。在 Rapid7 的文章中有一行關鍵字，“通過一個不同的列表來猜測名稱，列表包含 1000 強公司的名稱，以 .com, -backup, -media 排列。"
 <p>
 這就很有意思了。我很快為 HackerOne 創建了一列 Bucket 可能名稱，像這樣：
 
@@ -457,7 +457,7 @@ URL：https://hackerone.com/hacktivity
 
 2016 年 4 月到 5 月的一段時間，HackerOne 為黑客開發了一個新功能，來通過 Hacktivity 
 列表給報告投票。要知道功能是否可用，有個簡單的辦法，也有個難的辦法。通過簡單的辦法，
-登錄時`/current_user`的 GET 調用會包含`hacktivity_voting_enabled:false`。難的辦法有些有趣，
+登錄時`/current_user`的 GET 呼叫會包含`hacktivity_voting_enabled:false`。難的辦法有些有趣，
 其中存在漏洞，並且這就是我包含這篇報告的原因。
 
 如果你訪問了 hacktivity 並且查看了頁面源碼，你會注意到非常稀疏，只是一些`div`，沒有真正的內容。
@@ -481,16 +481,16 @@ HackerOne Hacktivity 頁面源碼
 
 HackerOne 應用的 JavaScript POST 投票
 
-你可以看到，我們有兩個用於投票功能的路徑。在寫這個報告的時候，你實際可以執行這些調用，並給報告投票。
+你可以看到，我們有兩個用於投票功能的路徑。在寫這個報告的時候，你實際可以執行這些呼叫，並給報告投票。
 <p>
 
-現在，這是發現功能的一種方式 -- 在報告中，黑客使用了另一種，通過攔截 HackerOne 的響應（大概是使用類似 Burp 的工具）。它們將返回為假的屬性切換為真。這之後暴露了投票元素，在點擊時，執行了可用的 POST 或者 DELETE 調用。
+現在，這是發現功能的一種方式 -- 在報告中，黑客使用了另一種，通過攔截 HackerOne 的響應（大概是使用類似 Burp 的工具）。它們將返回為假的屬性切換為真。這之後暴露了投票元素，在點擊時，執行了可用的 POST 或者 DELETE 呼叫。
 <p>
 
-我想你展示 JavaScript 的原因時，和 JSON 響應交互可能不會總是暴露新的 HTML 元素。因此，瀏覽 JavaScript 可能暴露其它“隱藏的”終端來交互。
+我想你展示 JavaScript 的原因時，和 JSON 響應交互可能不會總是暴露新的 HTML 元素。因此，瀏覽 JavaScript 可能暴露其它"隱藏的"終端來交互。
 
 >重要結論
 >
->JavaScript 源代碼想你提供了來自目標的實際源代碼，你可以瀏覽它們。這非常棒，因為你的測試從完全黑盒，
->對後端沒有任何想法，變成了白盒（雖然也不完全是），其中可以觀察代碼如何執行。這不意味你需要走查每一行代碼，
->這裡的 POST 調用在 20570 >行發現，只使用了一個簡單的 POST 搜索。
+>JavaScript 程式碼想你提供了來自目標的實際程式碼，你可以瀏覽它們。這非常棒，因為你的測試從完全黑盒，
+>對後端沒有任何想法，變成了白盒（雖然也不完全是），其中可以觀察程式碼如何執行。這不意味你需要走查每一行程式碼，
+>這裡的 POST 呼叫在 20570 >行發現，只使用了一個簡單的 POST 搜索。
