--- a/Web_Hacking_101/0x05-應用邏輯漏洞.md
+++ b/Web_Hacking_101/0x05-應用邏輯漏洞.md
@@ -531,7 +531,9 @@ Name: stage.pornhub.com
 Address: 31.192.117.70
 ```
 
-我也看到，這個可以通過命令`ping`來完成，但是無論哪種方法，它現在擁有了子域的IP 地址，並使用命令`sudo namp -sSV -p- 31.192.117.70 -oA stage__ph -T4 &`，它得到了：
+我也看到，這個可以通過命令`ping`來完成，但是無論哪種方法，它現在擁有了子域的IP 地址，
+<p>
+並使用命令`sudo namp -sSV -p- 31.192.117.70 -oA stage__ph -T4 &`，它得到了：
 
 ```
 Starting Nmap 6.47 ( http://nmap.org ) at 2016-06-07 14:09 CEST
@@ -550,12 +552,16 @@ Nmap done: 1 IP address (1 host up) scanned in 22.73 seconds
 
 - 標誌-sSV定義了發送給服務器的封包類型，告訴 Nmap 嘗試和判斷任何開放端口上的服務。
 <p>
+
 - -p-告訴服務器要檢查所有 65535 個端口（默認只會檢查常用的 1000 個端口）。
 <p>
+
 - 31.192.117.70是要掃描的 IP。
 <p>
+
 - -oA stage__ph告訴 Nmap 一次以三種主要格式輸出它的發現，使用文件名稱stage__ph。
 <p>
+	
 - -T4定義了任務的時間（選項為 0 ~ 5，數字越大就越快）。
 
 對於結果來說，要注意的關鍵就是端口 60893 是打開的，而且 Nmap 認為它運行 Memcache。對於那些不熟悉的人，Memcache 是一個緩存服務，它使用鍵值對來儲存任意數據。它通常通過更快地服務內容，用於提升網站的速度。類似的服務的 Redis。
@@ -586,5 +592,5 @@ Nmap done: 1 IP address (1 host up) scanned in 22.73 seconds
 
 任何時候一些類型的事務發生時，你也應該留意。始終有一些機會，其中開發者沒有在數據庫級別處理競態條件（特別是 NoSQL）。也就是說，它們的代碼可能會阻止你，但是如果你讓代碼執行夠快，比如幾乎同時完成，你就能發現靜態條件。確保你多次測試了這個領域內的任何東西，因為每次嘗試不一定都發生，就像星巴克的案例那樣。
 <p>
-	
+
 最後，要留意新的功能 -- 它通常為測試展示了新的區域。並且如果可能的話，自動化你的測試來更好利用你的時間。
