--- a/Web_Hacking_101/0x05-應用邏輯漏洞.md
+++ b/Web_Hacking_101/0x05-應用邏輯漏洞.md
@@ -14,13 +14,13 @@
 
 <p>
 
-在2012 年3 月，Egor 通知了Rails 社區，通常，Rails 會接受所有提交給它的參數，並使用這些值來更新數據庫記錄（取決於開發者的實現。Rails 核心開發者的想法是，使用Rails的Web 開發者應該負責填補它們的安全間隙，並定義那個值能夠由用戶提交來更新記錄。這個行為已經在社區內人人皆知了，但是Github 上的線程展示了很少的人能夠鑑別出來它帶來的風險（[https://github.com/rails/rails/issues/5228](https://github.com/rails/rails/issues/5228)）。
+在2012 年3 月，Egor 通知了Rails 社區，通常，Rails 會接受所有提交給它的參數，並使用這些值來更新資料庫記錄（取決於開發者的實現。Rails 核心開發者的想法是，使用Rails的Web 開發者應該負責填補它們的安全間隙，並定義那個值能夠由用戶提交來更新記錄。這個行為已經在社區內人人皆知了，但是Github 上的線程展示了很少的人能夠鑑別出來它帶來的風險（[https://github.com/rails/rails/issues/5228](https://github.com/rails/rails/issues/5228)）。
 
-當核心開發者不同意他的時候，Egor 繼續利用Github 上的認證漏洞，通過猜測和提交參數值，它包含創建日期（如果你熟悉Rails 並且知道多數數據庫記錄包含創建和更新日期列，它就不太困難）。因此，它在 Github 上傳了一個票據，年份是未來的某個日期。它也設法更新 SHH 訪問密鑰，這可以使他訪問 Github 官方的程式碼倉庫
+當核心開發者不同意他的時候，Egor 繼續利用Github 上的認證漏洞，通過猜測和提交參數值，它包含創建日期（如果你熟悉Rails 並且知道多數資料庫記錄包含創建和更新日期列，它就不太困難）。因此，它在 Github 上傳了一個票據，年份是未來的某個日期。它也設法更新 SHH 訪問密鑰，這可以使他訪問 Github 官方的程式碼倉庫
 
 <p>
 
-之前提到了，這個滲透通過 Github 後端程式碼實現，它並沒有合理驗證 Egor 所做的事情，這在隨後可用於更新數據庫記錄。這裡，Egor 發現了叫做大量賦值漏洞的東西。
+之前提到了，這個滲透通過 Github 後端程式碼實現，它並沒有合理驗證 Egor 所做的事情，這在隨後可用於更新資料庫記錄。這裡，Egor 發現了叫做大量賦值漏洞的東西。
 
 
 <p>
@@ -533,6 +533,7 @@ Address: 31.192.117.70
 
 我也看到，這個可以通過命令`ping`來完成，但是無論哪種方法，它現在擁有了子域的IP 地址，
 <p>
+	
 並使用命令`sudo namp -sSV -p- 31.192.117.70 -oA stage__ph -T4 &`，它得到了：
 
 ```
@@ -564,7 +565,7 @@ Nmap done: 1 IP address (1 host up) scanned in 22.73 seconds
 
 - -T4定義了任務的時間（選項為 0 ~ 5，數字越大就越快）。
 
-對於結果來說，要注意的關鍵就是端口 60893 是打開的，而且 Nmap 認為它運行 Memcache。對於那些不熟悉的人，Memcache 是一個緩存服務，它使用鍵值對來儲存任意數據。它通常通過更快地服務內容，用於提升網站的速度。類似的服務的 Redis。
+對於結果來說，要注意的關鍵就是端口 60893 是打開的，而且 Nmap 認為它運行 Memcache。對於那些不熟悉的人，Memcache 是一個緩存服務，它使用鍵值對來儲存任意資料。它通常通過更快地服務內容，用於提升網站的速度。類似的服務的 Redis。
 <p>
 發現這本身不是個漏洞，但是是個危險信號（雖然安裝指南推薦使其不可能公開訪問，作為一個安全措施）。測試之後，意外的是 Pornhub 並沒有開啟任何安全手段。 Andy 能夠通過 netcat 連接服務，不需要用戶名和密碼。連接之後，它執行命令來獲取版本，狀態，以及其他，為了確認這個和漏洞。
 <p>
@@ -573,13 +574,13 @@ Nmap done: 1 IP address (1 host up) scanned in 22.73 seconds
 - 造成拒絕服務，通過持續寫入和刪除緩存，因此使服務器保持繁忙（取決於站點的配置）。
 <p>
 
-- 通過用垃圾緩存數據填充服務，造成 DOS，同樣取決於站點配置。
+- 通過用垃圾緩存資料填充服務，造成 DOS，同樣取決於站點配置。
 <p>
 
-- 執行跨站腳本攻擊，通過注入惡意 JS 載荷作為有效的緩存數據，來提供給用戶。
+- 執行跨站腳本攻擊，通過注入惡意 JS 載荷作為有效的緩存資料，來提供給用戶。
 <p>
-	
-- 可能的話，執行 SQL 注入，如果 memcache 數據在數據庫中存儲的話。
+
+- 可能的話，執行 SQL 注入，如果 memcache 資料在資料庫中存儲的話。
 
 >總要結論
 >
@@ -588,12 +589,12 @@ Nmap done: 1 IP address (1 host up) scanned in 22.73 seconds
 >例如 Nmap、Eyewitness、KnockPy，以及其他。這有助於你獲得 Andy 的視角。
 
 ## **總結**
-應用邏輯漏洞不一定總是涉及代碼。反之，利用它們通產更需要敏銳的觀察力，以及跳出思維定式。始終留意其它站點可能使用的工具和服務，因為它們代表了新的攻擊向量。這包括站點所使用的來渲染內容的 JavaScript 庫。
+應用邏輯漏洞不一定總是涉及程式碼。反之，利用它們通產更需要敏銳的觀察力，以及跳出思維定式。始終留意其它站點可能使用的工具和服務，因為它們代表了新的攻擊向量。這包括站點所使用的來渲染內容的 JavaScript 庫。
 <p>
 發現它們或多或少都需要代理攔截器，在將其發送到你所利用的站點之前，它能讓你玩轉一些值。嘗試修改任何值，只要它們和識別你的賬戶相關。這可能包含建立兩個不同的賬戶，以便你有兩套有效的憑據，這可能有幫助。同時尋找隱藏或不常用的終端，它可以用於利用無意中訪問的功能。
 <p>
 
-任何時候一些類型的事務發生時，你也應該留意。始終有一些機會，其中開發者沒有在數據庫級別處理競態條件（特別是 NoSQL）。也就是說，它們的代碼可能會阻止你，但是如果你讓代碼執行夠快，比如幾乎同時完成，你就能發現靜態條件。確保你多次測試了這個領域內的任何東西，因為每次嘗試不一定都發生，就像星巴克的案例那樣。
+任何時候一些類型的事務發生時，你也應該留意。始終有一些機會，其中開發者沒有在資料庫級別處理競態條件（特別是 NoSQL）。也就是說，它們的程式碼可能會阻止你，但是如果你讓程式碼執行夠快，比如幾乎同時完成，你就能發現靜態條件。確保你多次測試了這個領域內的任何東西，因為每次嘗試不一定都發生，就像星巴克的案例那樣。
 <p>
 
 最後，要留意新的功能 -- 它通常為測試展示了新的區域。並且如果可能的話，自動化你的測試來更好利用你的時間。
