--- a/Web_Hacking_101/0x05-應用邏輯漏洞.md
+++ b/Web_Hacking_101/0x05-應用邏輯漏洞.md
@@ -551,19 +551,19 @@ Nmap done: 1 IP address (1 host up) scanned in 22.73 seconds
 
 將命令拆解一下：
 
-- 標誌-sSV定義了發送給服務器的封包類型，告訴 Nmap 嘗試和判斷任何開放端口上的服務。
+- 標誌`-sSV`定義了發送給服務器的封包類型，告訴 Nmap 嘗試和判斷任何開放端口上的服務。
 <p>
 
-- -p-告訴服務器要檢查所有 65535 個端口（默認只會檢查常用的 1000 個端口）。
+- `-p-`告訴服務器要檢查所有 65535 個端口（默認只會檢查常用的 1000 個端口）。
 <p>
 
-- 31.192.117.70是要掃描的 IP。
+- `31.192.117.70`是要掃描的 IP。
 <p>
 
-- -oA stage__ph告訴 Nmap 一次以三種主要格式輸出它的發現，使用文件名稱stage__ph。
+- `-oA stage__ph`告訴 Nmap 一次以三種主要格式輸出它的發現，使用文件名稱`stage__ph`。
 <p>
 
-- -T4定義了任務的時間（選項為 0 ~ 5，數字越大就越快）。
+- `-T4`定義了任務的時間（選項為 0 ~ 5，數字越大就越快）。
 
 對於結果來說，要注意的關鍵就是端口 60893 是打開的，而且 Nmap 認為它運行 Memcache。對於那些不熟悉的人，Memcache 是一個緩存服務，它使用鍵值對來儲存任意資料。它通常通過更快地服務內容，用於提升網站的速度。類似的服務的 Redis。
 <p>
